language/tests/regent/compile_fail/duplicate_task_param1.rg
-- Copyright 2024 Stanford University
--
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
--
--     http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.

-- fails-with:
-- duplicate_task_param1.rg:23: parameters $y and $x have the same type, but are required to be distinct
-- task f(x : r, y : r) end
--               ^

import "regent"

local r = region(int)
task f(x : r, y : r) end
f:compile()
